Fixed swagger ui, updated the openApi specs.
